02-deployment-config-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: config-server
  name: config-server
  namespace: default
spec:
  replicas: 1
  minReadySeconds: 45
  selector:
    matchLabels:
      app: config-server
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: config-server
    spec:
      containers:
      - name: config-server
        image: madhanbadridocker/config-server:latest	  
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8012			
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: config-server
  name: config-server
  namespace: default
spec:
  ports:
  - name: "8012"
    port: 8012
    targetPort: 8012	
  selector:
    app: config-server
  sessionAffinity: None
  type: LoadBalancer
