03-deployment-eureka-server.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: eureka-server
  name: eureka-server
  namespace: default
spec:
  replicas: 1
  minReadySeconds: 45
  selector:
    matchLabels:
      app: eureka-server
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: eureka-server
    spec:
      containers:
      - name: eureka-server
        image: madhanbadridocker/eureka-server:latest	  
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8010			
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: eureka-server
  name: eureka-server
  namespace: default
spec:
  ports:
  - name: "8010"
    port: 8010
    targetPort: 8010	
  selector:
    app: eureka-server
  sessionAffinity: None
  type: ClusterIP
