04-deployment-zuul.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: zuul
  name: zuul
  namespace: default
spec:
  replicas: 1
  minReadySeconds: 45
  selector:
    matchLabels:
      app: zuul
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: zuul
    spec:
      containers:
      - name: zuul
        image: madhanbadridocker/zuul-api-gateway:0.0.2	  
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8011			
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: zuul
  name: zuul
  namespace: default
spec:
  ports:
  - name: "8011"
    port: 8011
    targetPort: 8011	
  selector:
    app: zuul
  sessionAffinity: None
  type: LoadBalancer
