05-deployment-elastic-search.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: elasticsearch
  name: elasticsearch
  namespace: default
spec:
  replicas: 1
  minReadySeconds: 45
  selector:
    matchLabels:
      app: elasticsearch
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: elasticsearch
    spec:
      containers:
      - name: elasticsearch
        image: elasticsearch:7.3.0	  
        imagePullPolicy: IfNotPresent
#        resources:
#          limits:
#            cpu: 500m
#            memory: 2Gi
#          requests:
#            cpu: 500m
#            memory: 2Gi            
        ports:
        - containerPort: 9200	
        - containerPort: 9300	
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      volumes:
      - name: es-data-claim
        persistentVolumeClaim:
          claimName: es-data-claim      
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: elasticsearch
  name: elasticsearch
  namespace: default
spec:
  ports:
  - name: "9200"
    port: 9200
    targetPort: 9200
  - name: "9300"
    port: 9300
    targetPort: 9300	
  selector:
    app: elasticsearch
  sessionAffinity: None
  type: ClusterIP
