07-statefulset-albums-logstash.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: albums-ws
  name: albums-ws
  namespace: default
spec:
  serviceName: albums-ws
  replicas: 3
  updateStrategy:
    type: RollingUpdate  
  selector:
    matchLabels:
      app: albums-ws
  template:
    metadata:
      labels:
        app: albums-ws
    spec:
      containers:
      - name: albums-ws
        image: madhanbadridocker/albums-microservice:0.0.1	  
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8013			
        volumeMounts:
        - name: api-logs-albums
          mountPath: /api-logs
      - name: logstash
        image: madhanbadridocker/albums-microservice-logstash:0.0.2	  
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5044	
        volumeMounts:
        - name: api-logs-albums
          mountPath: /api-logs		
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
  volumeClaimTemplates:
  - metadata:
      name: api-logs-albums
#      annotations:
#        volume.beta.kubernetes.io/storage-class: disk
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: disk	  	  
      resources:
        requests:
          storage: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: albums-ws
  name: albums-ws
  namespace: default
spec:
  ports:
  - name: "8013"
    port: 8013
    protocol: TCP	
    targetPort: 8013	
  selector:
    app: albums-ws
  sessionAffinity: None
  type: NodePort
