08-deployment-mysql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mysql
  name: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql  
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - env:
        - name: MYSQL_DATABASE
          value: photo_app
        - name: MYSQL_PASSWORD
          value: Skodacar1!
        - name: MYSQL_ROOT_PASSWORD
          value: photoappuser
        - name: MYSQL_USER
          value: photoappuser
        image: mysql:5.7
        args:
          - "--ignore-db-dir=lost+found"
        name: mysql
        ports:
        - containerPort: 3306
        volumeMounts:
        - mountPath: /var/lib/mysql
          name: mysql-database-data-volume
      restartPolicy: Always
      volumes:
      - name: mysql-database-data-volume
        persistentVolumeClaim:
          claimName: mysql-database-data-volume
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mysql
  name: mysql
  namespace: default
spec:
  ports:
  - name: "3306"
    port: 3306
    targetPort: 3306	
  selector:
    app: mysql
  sessionAffinity: None
  type: ClusterIP
