09-deployment-zipkin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: zipkin
  name: zipkin
  namespace: default
spec:
  replicas: 1
  minReadySeconds: 45
  selector:
    matchLabels:
      app: zipkin
  template:
    metadata:
      labels:
        app: zipkin
    spec:
      containers:
      - name: zipkin
        image: openzipkin/zipkin	  
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9411			
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: zipkin
  name: zipkin
  namespace: default
spec:
  ports:
  - name: "9411"
    port: 9411
    targetPort: 9411	
  selector:
    app: zipkin
  sessionAffinity: None
  type: LoadBalancer
