10-statefulset-user-logstash.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: user-ws
  name: user-ws
  namespace: default
spec:
  serviceName: user-ws
  replicas: 3
  updateStrategy:
    type: RollingUpdate  
  selector:
    matchLabels:
      app: user-ws
  template:
    metadata:
      labels:
        app: user-ws
    spec:
      containers:
      - name: user-ws
        image: madhanbadridocker/users-microservice 
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8014			
        volumeMounts:
        - name: api-logs-users
          mountPath: /api-logs
      - name: logstash
        image: madhanbadridocker/users-microservice-logstash:0.0.2	  
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5044	
        volumeMounts:
        - name: api-logs-users
          mountPath: /api-logs
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
  volumeClaimTemplates:
  - metadata:
      name: api-logs-users
#      annotations:
#        volume.beta.kubernetes.io/storage-class: disk
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: disk		  
      resources:
        requests:
          storage: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: user-ws
  name: user-ws
  namespace: default
spec:
  ports:
  - name: "8014"
    port: 8014
    targetPort: 8014	
  selector:
    app: user-ws
  sessionAffinity: None
  type: ClusterIP
